<resources>
    <string name="app_name">GPS Sports Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="buttonMapView">Head Up</string>
    <string name="buttonCompass">Compass</string>
    <string name="buttonOptions">Options</string>
    <string name="buttonStart">Start</string>
    <string name="buttonAddCP">Add CPoint</string>
    <string name="buttonRemoveWP">Reset WPoint</string>
    <string name="textFromStart">From Start</string>
    <string name="textFromStartDistanceLabel">Dist.:</string>
    <string name="textFromStartDistance">0</string>
    <string name="textFromStartTime">00:00:00</string>
    <string name="textFromStartLabel">Time:</string>
    <string name="textFromStartSpeedLabel">Speed:</string>
    <string name="textFromStartSpeed">0</string>
    <string name="textFromCPoint">From CheckPoint</string>
    <string name="textFromCPointDistanceLabel">Dist.:</string>
    <string name="textFromCPointDistance">0 m</string>
    <string name="textFromCPointDirect">0 m</string>
    <string name="textFromCPointDirectLabel">Dir.:</string>
    <string name="textFromCPointSpeedLabel">Speed:</string>
    <string name="textFromCPointSpeed">0 km/h</string>
    <string name="textFromWPoint">Till WayPoint</string>
    <string name="textFromWPointDistanceLabel">Dist.:</string>
    <string name="textFromWPointDistance">0 m</string>
    <string name="textFromWPointDirect">0 m</string>
    <string name="textFromWPointDirectLabel">Dir:</string>
    <string name="textFromWPointSpeedLabel">Speed:</string>
    <string name="textFromWPointSpeed">0 km/h</string>
    <string name="textPleaseRegister">Please Register</string>
    <string name="textFirstName">First Name</string>
    <string name="textLastName">Last Name</string>
    <string name="textEmail">E-mail</string>
    <string name="textPassword">Password</string>
    <string name="buttonRegister">Register</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="textPleaseLogin">Please LogIn</string>
    <string name="buttonLogin">Log in</string>
    <string name="buttonNewUser">New User</string>
    <string name="buttonBack">Back</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="northUp">North Up</string>
    <string name="headUp">Bearing Up</string>
    <string name="add_wp">Add WP</string>
    <string name="add_cp">Add CP</string>
    <string name="question">Question</string>
    <string name="questionBody">Do you really want to finish activity?</string>
    <string name="no">No!</string>
    <string name="yes">Yes!</string>
    <string name="title_activity_data">Map</string>
    <string name="textDescription">Description</string>
    <string name="editTextDescription">Add comments to your activity.</string>
    <string name="textDuration">Duration</string>
    <string name="textPace">Pace</string>
    <string name="textDistanceTotal">Distance</string>
    <string name="activity">Activity Name</string>
    <string name="textActivityTime">Recorded at:</string>
    <string name="activity_name">Activity Name</string>
    <string name="buttonPreviousActivities">Save &amp; Close</string>
    <string name="buttonClose">Share GPX</string>
    <string name="openButton">…View and Edit?</string>
    <string name="deleteButton">Delete?</string>
    <string name="activityDeleted">Activity Deleted</string>
    <string name="current_drection">Current Drection</string>
    <string name="text_degrees">0</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">Login</string>
    <string name="menu_map_settings">Map Settings</string>
    <string name="activityCompleted">Activity Completed</string>
    <string name="activityResumed">Activity Resumed</string>
    <string name="providePermissions">Please provide Location permissions for app functionality!</string>
    <string name="ok">OK</string>
    <string name="interactionCancelled">User interaction cancelled</string>
    <string name="permissionGranted">Permission granted</string>
    <string name="applicationMalfunction">Application is malfunction without Location permission.</string>
    <string name="appSettings">App Settings</string>
    <string name="loggedIn">You logged in</string>
    <string name="registrationDone">You registered in…</string>
    <string name="sessionStarted">Session Started</string>
    <string name="sessionUpdated">Session updated.</string>
    <string name="sessionDeleted">Session Deleted</string>
    <string name="recyclerQuestion">Do you want to…</string>
    <string name="chooser">Choose an app</string>
    <string name="longPressForWP">Long press on map to create WayPoint on Marker position. Click to change position of Marker.</string>
    <string name="optionsLoggedInAs">Logged in as:</string>
    <string name="previousActivities">Previous Activities</string>

    <string-array name="activities">
        <item>Running - easy</item>
        <item>Running</item>
        <item>Orienteering - easy</item>
        <item>Orienteering - competition</item>
        <item>Bicycle - easy</item>
        <item>Bicycle - competition</item>
    </string-array>
</resources>